# ebook-manager

./: .gitignore  .stylish-haskell.yaml  .travis.yml  ChangeLog.md  README.md  default.nix  ebook-manager.cabal  nixpkgs-version.json  project.nix  release.nix  shell.nix  to-flyway.dhall
backend/: backend.cabal
backend/src/: API.hs  Configuration.hs  Database.hs  Datastore.hs  Main.hs  Server.hs  Spec.hs  View.hs
backend/src/API/: Books.hs  Catalogue.hs  Channels.hs  Users.hs
backend/src/Database/: Book.hs  Channel.hs  Schema.hs  Tag.hs  User.hs
backend/src/Devel/: Main.hs
backend/src/Servant/: XML.hs
backend/src/Server/: Auth.hs
common/: common.cabal
common/src/: Configuration.hs  Spec.hs
config/: Configuration.dhall  config.dhall.sample  devel.dhall
frontend/: frontend.cabal
frontend/src/: Main.hs
migrations/: V1.1__Channel_visibility.sql  V1.2__unique_tags.sql  V1__Initial_databas.sql  V1__Initial_database.sql
src/: API.hs  Configuration.hs  Database.hs  Main.hs  Server.hs  Types.hs  View.hs
src/API/: Books.hs  Catalogue.hs  Channels.hs  Users.hs
src/Data/: Versioned.hs
src/Database/: Book.hs  Channel.hs  Schema.hs  Tag.hs  User.hs
src/Devel/: Main.hs
src/Servant/: XML.hs
src/Server/: Auth.hs
